Agrego seccion destacadas y modifico color de lineas separadoras de secciones

--- a/index.html
+++ b/index.html
@@ -120,6 +120,70 @@
       </div>
     </section> <!-- ! FIN SECTION CARD-->
 
+    <div class="lineas mt-5">
+      <h2>DESTACADOS</h2>
+    </div>
+
+    <section class="container"> <!-- !Section destacados -->
+
+      <div class="row mt-1">
+        <div class="col">
+          <div class="card destacadas">
+            <img src="public/imgs/banner.webp" class="card-img card-1-dest" alt="...">
+          </div>
+        </div>
+      </div>
+
+      <div class="row row-cols-2 row-cols-md-4 g-4 my-1"> <!-- my:margin top y bottom -->
+        <!-- row-cols-md-4 tamaño || row-cols-2: cantidad de columnas al achicar -->
+
+        <div class="col">
+          <div class="card destacadas wh">
+            <a href="#">
+              <img src="public/imgs/accesorios/auriculares.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-muted">Buds 3T Pro</h5>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card destacadas wh">
+            <a href="#">
+              <img src="public/imgs/accesorios/scooter.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-muted">Electric Scooter 3</h5>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card destacadas wh">
+            <a href="">
+              <img src="public/imgs/accesorios/reloj.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-muted">Watch S1</h5>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="card destacadas wh">
+            <a>
+              <img src="public/imgs/accesorios/reloj-2.jpg" class="card-img" alt="...">
+              <div class="card-img-overlay">
+                <h5 class="card-title text-muted">Redmi Watch 2</h5>
+              </div>
+            </a>
+          </div>
+        </div>
+
+      </div>
+
+    </section> <!-- ! FIN DESTACADOS -->
   </main>
 
   <section class="footer mt-5 container-fluid"> <!-- ! SECTION FOOTER -->
