--- a/index.html
+++ b/index.html
@@ -9,35 +9,74 @@
 </head>
 
 <body class="body">
-  <header class="container"> <!-- ! NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-m "> <!-- navbar-expand-lg: expande todo -->
-      <a href="index.html"><img class="icono" src="public/imgs/icono.webp" alt=""> </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <!-- navbar-toggler para usar con nuestro complemento de colapso y otros comportamientos de alternancia de navegación. -->
-        <span class="navbar-toggler-icon"></span> <!-- el icono al achicar la pagina -->
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0"> <!-- me: margin end -->
-          <li class="nav-item">
-            <a class="nav-link" href="#">Smartphones</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Accesorios</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Computación</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-          <a href="#"><i class="bi bi-cart4"></i></a>
-        </form>
-      </div>
-    </nav>
-  </header> <!-- ! FIN NAVBAR -->
+  <header class="container-fluid nav">
+    <!-- ! navbar -->
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-m "> <!-- navbar-expand-lg: expande todo -->
+        <a href="index.html"><img class="icono" src="public/imgs/icono.webp" alt=""> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <!-- navbar-toggler para usar con nuestro complemento de colapso y otros comportamientos de alternancia de navegación. -->
+          <span class="navbar-toggler-icon"></span> <!-- el icono al achicar la pagina -->
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0"> <!-- me: margin end -->
+            <li class="nav-item">
+              <a class="nav-link" href="pages/smartphones.html">Smartphones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/accesorios.html">Accesorios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/computacion.html">Computación</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+            <a href="./pages/carrito.html"><i class="bi bi-cart4"></i></a>
+          </form>
+        </div>
+      </nav> <!--  -->
+    </div>
+  </header>
+
   <main>
+    <!--! Section carousel-->
+    <div id="carouselExampleIndicators" class="carousel carousel-dark slide " data-bs-ride="carousel"
+      data-bs-interval="5000">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Slide 1"></button> <!-- la clasea active comienza solo -->
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+          aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+          aria-label="Slide 3"></button>
+      </div>
+
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="public/imgs/propagandas/propaganda1.jpg" class="d-block w-100" alt="..."> <!-- w-100 ocupa todo -->
+        </div>
+        <div class="carousel-item">
+          <img src="public/imgs/propagandas/propaganda2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="public/imgs/propagandas/propaganda3.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <!-- botones para pasar -->
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div> <!-- .carousel -->
 
     <div class="lineas">
       <h2>SMARTPHONES</h2>
@@ -51,8 +90,7 @@
 
         <div class="col"> <!-- primera card -->
           <div class="card">
-            <a href="#"><img src="/imgs/celulares/ph-1.jpg" class="card-img-top"
-                alt=""></a>
+            <a href="#"><img src="/imgs/celulares/ph-1.jpg" class="card-img-top" alt=""></a>
             <div class="card-body">
               <a href="#">
                 <h5 class="card-title">Redmi 10 2022 4GB RAM</h5>
