Agrego paginas accesorios y computacion

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -45,20 +45,20 @@
 
     <main>
         <section class="container pt-4 pb-2">
-            <h2 class="titulo-productos">Smartphones</h2>
+            <h2 class="titulo-productos">Accesorios</h2>
 
             <div class="row row-cols-2 row-cols-md-4 g-3 py-2">
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-1.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/auriculares.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Redmi 10 2022</h5>
-                            <p class="card-text text-start">¡Subí de nivel! Cámara cuádruple de 50 MP con IA | Pantalla
-                                FHD+ de 90 Hz</p>
+                            <h5 class="card-title">Buds 3T Pro</h5>
+                            <p class="card-text text-start">Obtené acceso a la mejor
+                                versión de tus canciones y escúchalas continuamente hasta por 6 horas.</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$155.900</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>$127.900</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
@@ -66,14 +66,14 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-2.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/scooter.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Xiaomi 11T Pro</h5>
-                            <p class="card-text text-start">Cámara Pro de 108 Mpx.Procesador flagship Qualcomm®
-                                Snapdragon™ 888.</p>
+                            <h5 class="card-title">Electric Scooter 3</h5>
+                            <p class="card-text text-start">Cuenta con Energía
+                                eléctrica suficiente para que puedas moverte a todos lados.</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$631.900</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>$671.900</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
@@ -81,15 +81,14 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-3.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/reloj.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Redmi Note 11 Pro+</h5>
-                            <p class="card-text text-start">Experiencia audiovisual excepcional gracias a la pantalla
-                                AMOLED
-                                de 120 Hz y sus parlantes.</p>
+                            <h5 class="card-title">Watch S1</h5>
+                            <p class="card-text text-start">Pantalla AMOLED HD de 1.43″ Posee 19 modos profesionales,
+                                incluidos el HIIT y la máquina elíptica.</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$399.900</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>196.900</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
@@ -97,13 +96,14 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-4.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/reloj-2.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Redmi Note 11S</h5>
-                            <p class="card-text text-start">Pantalla AMOLED de 6.43".Tiene 4 cámaras traseras de 108Mpx/8Mpx/2Mpx/2Mpx.</p>
+                            <h5 class="card-title">Redmi Wach 2</h5>
+                            <p class="card-text text-start">Pantalla táctil a color de 1,55".Más de 100 modos
+                                deportivos. Resistencia al agua 5 ATM*</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$350.900</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>$82.900</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
@@ -111,14 +111,14 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-5.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/cargador.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Redmi 10A</h5>
-                            <p class="card-text text-start">Pantalla de 6,53". Tus películas favoritas cobran vida en la
-                                gran pantalla HD+ de 6,53".</p>
+                            <h5 class="card-title">Xiaomi 10W</h5>
+                            <p class="card-text text-start">Powerbank Xiaomi con posibilidad de carga inductiva. Carga
+                                dos dispositivos al mismo tiempo.</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$95.899</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>$40.199</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
@@ -126,14 +126,14 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/celulares/ph-6.jpg" class="img-fluid" alt="...">
+                        <img src="../public/imgs/accesorios/cable.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Xiaomi 11T</h5>
-                            <p class="card-text text-start">Xiaomi 11T le permite cargar la batería al 100% en 36
-                                minutos!.</p>
+                            <h5 class="card-title">Cable USB-C a USB-A</h5>
+                            <p class="card-text text-start">Reforzado con fibra de vidrio y TPE, cable USB-C con una
+                                longitud de 100 cm.</p>
                         </div>
-                        <div class="mb-3 d-flex justify-content-around">
-                            <h4>$498.900</h4>
+                        <div class="mb-2 d-flex justify-content-around">
+                            <h4>$6.599</h4>
                             <button class="btn btn-primary">Comprar</button>
                         </div>
                     </div>
