--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0"> <!-- me: margin end -->
             <li class="nav-item">
-              <a class="nav-link" href="pages/smartphones.html">Smartphones</a>
+              <a class="nav-link" href="/pages/smartphones.html">Smartphones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/accesorios.html">Accesorios</a>
+              <a class="nav-link" href="/pages/accesorios.html">Accesorios</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./pages/computacion.html">Computación</a>
+              <a class="nav-link" href="/pages/computacion.html">Computación</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
-            <a href="./pages/carrito.html"><i class="bi bi-cart4"></i></a>
+            <a href="/pages/carrito.html"><i class="bi bi-cart4"></i></a>
           </form>
         </div>
       </nav> <!--  -->
