--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -36,7 +36,7 @@
                         <input class="form-control me-2" type="search" placeholder="¿Qué estás buscando?"
                             aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Buscar</button>
-                        <a href="#"><i class="bi bi-cart4"></i></a>
+                        <a href="/pages/carrito.html"><i class="bi bi-cart4"></i></a>
                     </form>
                 </div>
             </nav> <!--  -->
