Agrego los enlaces y modifico error de botton y a

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -84,15 +83,14 @@
 
 
     <section class="container"> <!--! Section card-->
-
       <div class="row row-cols-2 row-cols-md-4 g-3">
         <!-- row-cols-2: dos columnas al achicaar || row-cols-md-4 cantidad de columnas al estar abierto al 100% || g-2: espacio entre cards al achicar -->
 
         <div class="col"> <!-- primera card -->
           <div class="card">
-            <a href="#"><img src="/imgs/celulares/ph-1.jpg" class="card-img-top" alt=""></a>
+            <a href="pages/productos/smartphone-1.html"><img src="/imgs/celulares/ph-1.jpg" class="card-img-top " alt=""></a>
             <div class="card-body">
-              <a href="#">
+              <a href="pages/productos/smartphone-1.html">
                 <h5 class="card-title">Redmi 10 2022 4GB RAM</h5>
               </a>
               <p class="card-text">$184.900</p>
@@ -105,11 +103,11 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col"> <!-- segunda card -->
           <div class="card ">
-            <a href="#"><img src="/imgs/celulares/ph-2.jpg" class="card-img-top" alt=""></a>
+            <a href="pages/productos/smartphone-2.html"><img src="/imgs/celulares/ph-2.jpg" class="card-img-top" alt=""></a>
             <div class="card-body">
-              <a href="#">
+              <a href="pages/productos/smartphone-2.html">
                 <h5 class="card-title">Xiaomi 11T Pro 8GB RAM</h5>
               </a>
               <p class="card-text">$631.000</p>
@@ -122,11 +120,11 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col"> <!-- tercera card -->
           <div class="card">
-            <a href="#"><img src="/imgs/celulares/ph-3.jpg" class="card-img-top" alt=""></a>
+            <a href="pages/productos/smartphone-3.html"><img src="/imgs/celulares/ph-3.jpg" class="card-img-top" alt=""></a>
             <div class="card-body">
-              <a href="#">
+              <a href="pages/productos/smartphone-3.html">
                 <h5 class="card-title">Redmi Note 11 Pro+ 6GB RAM</h5>
               </a>
               <p class="card-text">$399.900</p>
@@ -139,11 +137,11 @@
           </div>
         </div>
 
-        <div class="col">
+        <div class="col"> <!-- cuarta card -->
           <div class="card">
-            <a href="#"><img src="/imgs/celulares/ph-4.jpg" class="card-img-top" alt=""></a>
+            <a href="pages/productos/smartphone-4.html"><img src="/imgs/celulares/ph-4.jpg" class="card-img-top" alt=""></a>
             <div class="card-body">
-              <a href="#">
+              <a href="pages/productos/smartphone-4.html">
                 <h5 class="card-title">Redmi Note 11S 6GB RAM</h5>
               </a>
               <p class="card-text">$350.900</p>
@@ -177,7 +175,7 @@
 
         <div class="col">
           <div class="card destacadas wh">
-            <a href="#">
+            <a href="pages/productos/accesorios-1.html">
               <img src="public/imgs/accesorios/auriculares.jpg" class="card-img" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-muted">Buds 3T Pro</h5>
@@ -188,7 +186,7 @@
 
         <div class="col">
           <div class="card destacadas wh">
-            <a href="#">
+            <a href="pages/productos/accesorios-2.html">
               <img src="public/imgs/accesorios/scooter.jpg" class="card-img" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-muted">Electric Scooter 3</h5>
@@ -199,7 +197,7 @@
 
         <div class="col">
           <div class="card destacadas wh">
-            <a href="">
+            <a href="pages/productos/accesorios-3.html">
               <img src="public/imgs/accesorios/reloj.jpg" class="card-img" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-muted">Watch S1</h5>
@@ -210,7 +208,7 @@
 
         <div class="col">
           <div class="card destacadas wh">
-            <a>
+            <a href="pages/productos/accesorios-4.html">
               <img src="public/imgs/accesorios/reloj-2.jpg" class="card-img" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-muted">Redmi Watch 2</h5>
@@ -220,12 +218,12 @@
         </div>
 
       </div>
-
     </section> <!-- ! FIN DESTACADOS -->
   </main>
 
   <section class="footer mt-5 container-fluid"> <!-- ! SECTION FOOTER -->
-    <div class="container">
+    
+<div class="container">
       <div class="row pt-5 row-cols-3">
         <div class="col-3">
           <h5 class="border-navs">Links útiles</h5>
