--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -13,7 +13,7 @@
         <!-- ! navbar -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-m "> <!-- navbar-expand-lg: expande todo -->
-                <a href="../index.html"><img class="icono" src="../public/imgs/icono.webp" alt=""> </a>
+                <a href="/index.html"><img class="icono" src="/public/imgs/icono.webp" alt=""> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -51,7 +51,7 @@
 
                 <div class="col">
                     <div class="card cards-productos">
-                        <img src="../public/imgs/accesorios/auriculares.jpg" class="img-fluid" alt="...">
+                        <img src="/public/imgs/accesorios/auriculares.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Buds 3T Pro</h5>
                             <p class="card-text text-start">Obtené acceso a la mejor
@@ -59,7 +59,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$127.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-1.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$671.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-2.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +89,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>196.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-3.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$82.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-4.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$40.199</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-5.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$6.599</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/accesorios-6.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
