--- a/pages/smartphones.html
+++ b/pages/smartphones.html
@@ -13,7 +13,7 @@
         <!-- ! navbar -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-m "> <!-- navbar-expand-lg: expande todo -->
-                <a href="../index.html"><img class="icono" src="../public/imgs/icono.webp" alt=""> </a>
+                <a href="/index.html"><img class="icono" src="../public/imgs/icono.webp" alt=""> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -54,12 +54,11 @@
                         <img src="../public/imgs/celulares/ph-1.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Redmi 10 2022</h5>
-                            <p class="card-text text-start">¡Subí de nivel! Cámara cuádruple de 50 MP con IA | Pantalla
-                                FHD+ de 90 Hz</p>
+                            <p class="card-text text-start">¡Subí de nivel! Cámara cuádruple de 50 MP con IA | Pantalla FHD+ de 90 Hz</p>
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$155.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-1.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +73,7 @@
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$631.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-2.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -84,13 +83,11 @@
                         <img src="../public/imgs/celulares/ph-3.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Redmi Note 11 Pro+</h5>
-                            <p class="card-text text-start">Experiencia audiovisual excepcional gracias a la pantalla
-                                AMOLED
-                                de 120 Hz y sus parlantes.</p>
+                            <p class="card-text text-start">Experiencia audiovisual excepcional gracias a la pantalla AMOLED de 120 Hz y sus parlantes.</p>
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$399.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-3.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +101,7 @@
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$350.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-4.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -114,12 +111,11 @@
                         <img src="../public/imgs/celulares/ph-5.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Redmi 10A</h5>
-                            <p class="card-text text-start">Pantalla de 6,53". Tus películas favoritas cobran vida en la
-                                gran pantalla HD+ de 6,53".</p>
+                            <p class="card-text text-start">Pantalla de 6,53". Tus películas favoritas cobran vida en la gran pantalla HD+ de 6,53".</p>
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$95.899</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-5.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -129,12 +125,11 @@
                         <img src="../public/imgs/celulares/ph-6.jpg" class="img-fluid" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Xiaomi 11T</h5>
-                            <p class="card-text text-start">Xiaomi 11T le permite cargar la batería al 100% en 36
-                                minutos!.</p>
+                            <p class="card-text text-start">Xiaomi 11T le permite cargar la batería al 100% en 36 minutos!.</p>
                         </div>
                         <div class="mb-3 d-flex justify-content-around">
                             <h4>$498.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/smartphone-6.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
