--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -13,7 +13,7 @@
         <!-- ! navbar -->
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-m "> <!-- navbar-expand-lg: expande todo -->
-                <a href="../index.html"><img class="icono" src="../public/imgs/icono.webp" alt=""> </a>
+                <a href="/index.html"><img class="icono" src="../public/imgs/icono.webp" alt=""> </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -59,7 +59,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$461.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/computacion-1.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$33.200</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/computacion-2.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,8 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>17.899</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/computacion-3.html" class="btn btn-primary">Ver</a>
+
                         </div>
                     </div>
                 </div>
@@ -103,10 +104,11 @@
                         </div>
                         <div class="mb-2 d-flex justify-content-around">
                             <h4>$115.900</h4>
-                            <button class="btn btn-primary">Comprar</button>
+                            <a href="/pages/productos/computacion-4.html" class="btn btn-primary">Ver</a>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
     </main>
